# agent-ext-api

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/: extapi.md
cowork-plugin/.claude-plugin/: plugin.json
cowork-plugin/skills/extapi-endpoints/: SKILL.md
cowork-plugin/skills/extapi-endpoints/references/: endpoints.md
src/extapi/: __init__.py  client.py  dry_run.py  gate.py  google_auth.py  google_token.py  logging.py  main.py  review_queue.py  settings.py
src/extapi/models/: passthrough.py
src/extapi/routers/: bitbucket.py  gcalendar.py  gdrive.py  gmail.py  google_auth.py  jira.py  review.py  slack.py
src/extapi/services/: bitbucket.py  gcalendar.py  gdrive.py  gmail.py  jira.py  slack.py
tests/: conftest.py  test_bitbucket.py  test_dry_run_deletes.py  test_gcalendar.py  test_gdrive.py  test_gmail.py  test_google_auth.py  test_health.py  test_jira.py  test_review_queue.py  test_slack.py
