[project]
name = "extapi"
version = "0.1.0"
description = "Authenticated proxy API for Jira and Bitbucket"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.9",
]

[project.scripts]
extapi = "extapi:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extapi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
